added multiple attempts

--- a/rlbot.cfg
+++ b/rlbot.cfg
@@ -21,13 +21,13 @@ game_mode = Soccer
 # Which map the game should load into. Too many to list.
 game_map = Mannfield
 # Automatically skip replays after a goal.
-skip_replays = False
+skip_replays = True
 # Skip the kickoff countdown
-start_without_countdown = False
+start_without_countdown = True
 
 [Mutator Configuration]
 # Match Length
-Match Length = 5 Minutes
+Match Length = Unlimited
 # Max Score
 Max Score = Unlimited
 # Overtime
