--- a/agents/levi_on_policy_agent/levi_on_policy_agent.cfg
+++ b/agents/levi_on_policy_agent/levi_on_policy_agent.cfg
@@ -1,14 +1,14 @@
 [Locations]
 # Path to loadout config from runner
-looks_config = .\appearance.cfg
+looks_config = .\masamune.cfg
 # Bot's python file.
 # Only need this if RLBot controlled
-python_file = .\torch_model.py
+python_file = .\levi_on_policy_agent.py
 # The name that will be displayed in game
-name = TestAgent
+name = Reinforcement Learning Agent
 
 [Bot Parameters]
 # Path to the model file
-model_path = models\rashbot.mdl
-
-
+model_path = models\test.mdl
+# The model should be loaded
+load_model = True
