--- a/agents/levi_swarm_agent/levi_swarm_agent.cfg
+++ b/agents/levi_swarm_agent/levi_swarm_agent.cfg
@@ -3,15 +3,13 @@
 looks_config = .\appearance.cfg
 # Bot's python file.
 # Only need this if RLBot controlled
-python_file = .\levitate_agent.py
+python_file = .\levi_swarm_agent.py
 # The name that will be displayed in game
-name = SwarmLearner
+name = Swarm Agent
 
 [Bot Parameters]
 # Path to the model file
-model_path = models\gosling.mdl
+model_path = models\human.mdl
 # The model should be loaded
-load_model = False
-# Path to the teacher bot
-teacher_path = teacher/rashBot-master/Agent.py
+load_model = True
 
